--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,20 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin="anonymous"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lato:wght@400&display=swap"
+			rel="stylesheet"
+		/>
+
 		%svelte.head%
 	</head>
 	<body>
