--- a/src/app.html
+++ b/src/app.html
@@ -10,11 +10,11 @@
 			crossorigin="anonymous"
 		/>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Lato:wght@400&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
 			rel="stylesheet"
 		/>
 
